learning-ops/3.2/statistics.md
---
book: learning-ops
version: 3.2
---
# Statistics

This chapter of the Learning OPS 3.2 provides a general overview of statistics available in Open Preprint Server (OPS). For more detailed information on statistics and usage guidelines, please see the Statistics chapter in [Learning OJS](/learning-ojs/3.2/en/statistics).

There are a number of identified improvements that will be made towards statistics specific to Server Preprints for future releases.

## Preprints

The Preprints section provides a visual display as well as a table format of preprint activity.  The visual graphic can be changed from Monthly or Daily view. While the table format will allow you to filter the Total in ascending or descending order. As well as changed to view Abstract and File activity.

![The visual graph and table of the Preprint Report](./assets/learning-ops-statistics-preprints-report.png)

There are also a number of filters that can be used including date range and section. The search bar under Preprint Details can be used to search for the activity of a specific preprint manuscript.

## Editorial Activity

The Editorial activity statistics provides a visual graph and trend table with a summary of the editorial activity for your Server. This can be filtered for a specific date range.

![The OPS Editorial Activity Report](./assets/learning-ops-statistics-editorial-report.png)

## Users

Provides a summary of the number of users registered in your server and by roles.

![The OPS User Report](./assets/learning-ops-statistics-users-report.png)

## Report Generator

You can generate statistical reports for usage and reviews or create a custom report. For information on how to use and configure statistics in OPS, see the relevant section in [Learning OJS](/learning-ojs/3.2/en/statistics#report-generator).
